--- a/app/src/main/res/layout/____for_tests_____layout.xml
+++ b/app/src/main/res/layout/____for_tests_____layout.xml
@@ -6,32 +6,49 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="horizontal"
-    tools:context=".MainActivity">
+    >
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_weight="6"
         android:layout_height="match_parent"
+        android:layout_weight="6"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:orientation="vertical"
-            android:layout_weight="2" >
+            android:layout_weight="2"
+            android:orientation="vertical">
 
-            <fragment
+            <GridLayout
+                android:id="@+id/ButtonsBlock"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:id="@+id/GameTableFragment"
-                android:name="com.tectro.mobileapp4.GameTableFragment"/>
-            <fragment
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:id="@+id/ListFragment"
-                android:name="com.tectro.mobileapp4.ListFragment"/>
+                android:layout_height="match_parent"
+                android:columnCount="2"
+                android:padding="20dp"
+                android:rowCount="2">
+
+                <Button
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    android:layout_gravity="fill"/>
+
+                <Button
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    android:layout_gravity="fill" />
+
+                <Button
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    android:layout_gravity="fill" />
+
+                <Button
+                    android:layout_rowWeight="1"
+                    android:layout_columnWeight="1"
+                    android:layout_gravity="fill"
+                    android:onClick="test" />
+            </GridLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -139,10 +156,10 @@
         </LinearLayout>
 
     </LinearLayout>
-<LinearLayout
-    android:layout_width="0dp"
-    android:layout_height="match_parent"
-    android:layout_weight="1"
-    android:background="@color/colorPrimary"
-    />
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="@color/colorPrimary" />
 </LinearLayout>
