--- a/app/src/main/res/layout/____for_tests_____layout.xml
+++ b/app/src/main/res/layout/____for_tests_____layout.xml
@@ -29,6 +29,8 @@
                 android:rowCount="2">
 
                 <Button
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
                     android:layout_rowWeight="1"
                     android:layout_columnWeight="1"
                     android:layout_gravity="fill"/>
@@ -47,7 +49,7 @@
                     android:layout_rowWeight="1"
                     android:layout_columnWeight="1"
                     android:layout_gravity="fill"
-                    android:onClick="test" />
+                   />
             </GridLayout>
         </LinearLayout>
 
