--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -3,19 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
     android:orientation="vertical"
+    android:layout_margin="10dp"
     tools:context=".ListFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-android:id="@+id/tstbtn"
-        android:onClick="test"/>
-
+   <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/RemainingFigures"
+       android:layout_width="match_parent"
+       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+       android:layout_height="match_parent"/>
 </LinearLayout>
