--- a/app/src/main/res/layout/fragment_game_table.xml
+++ b/app/src/main/res/layout/fragment_game_table.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-
-    tools:context=".GameTableFragment"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    tools:context=".GameTableFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
 
+        android:id="@+id/TableHolder"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/TableHolder"/>
+        android:layout_height="wrap_content"
+        />
+    <View
+        android:id="@+id/PlayerColorHolder"
+        android:background="@color/colorPrimaryDark"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.05"/>
 </LinearLayout>
